WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114781
[EFL] inspector-protocol/page/javascriptDialogEvents.html is failing
https://bugs.webkit.org/show_bug.cgi?id=114781
Summary
[EFL] inspector-protocol/page/javascriptDialogEvents.html is failing
Seokju Kwon
Reported
2013-04-17 19:44:28 PDT
--- /git/WebKit/layout/inspector-protocol/page/javascriptDialogEvents-expected.txt +++ /git/WebKit/layout/inspector-protocol/page/javascriptDialogEvents-actual.txt @@ -1,4 +1,4 @@ -CONFIRM NAVIGATION: beforeunload in javascriptDialogEvents +CONFIRM: beforeunload in javascriptDialogEvents ALERT: alert CONFIRM: confirm PROMPT: prompt, default text:
Attachments
Patch
(8.66 KB, patch)
2013-04-17 19:59 PDT
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Patch
(10.26 KB, patch)
2013-05-16 15:58 PDT
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2013-04-17 19:59:33 PDT
Created
attachment 198671
[details]
Patch
Seokju Kwon
Comment 2
2013-04-18 02:15:49 PDT
gyuyoung : What do you think about it?
Chris Dumez
Comment 3
2013-05-16 12:41:18 PDT
Comment on
attachment 198671
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=198671&action=review
> Source/WebKit/efl/ChangeLog:9 > +
Please check the following entry in efl-wk1 TestExpectations: # EFL's DRT needs CONFIRM NAVIGATION messages
webkit.org/b/87246
fast/loader/form-submission-after-beforeunload-cancel.html [ Failure ] If the test now passes please unskip it in this patch.
> Tools/DumpRenderTree/efl/DumpRenderTreeView.cpp:97 > + return EINA_TRUE;
You need to return !gTestRunner->shouldStayOnPageAfterHandlingBeforeUnload() instead of unconditionally EINA_TRUE I believe. Please check other ports.
Chris Dumez
Comment 4
2013-05-16 12:43:15 PDT
***
Bug 87246
has been marked as a duplicate of this bug. ***
Seokju Kwon
Comment 5
2013-05-16 15:54:40 PDT
(In reply to
comment #3
)
> (From update of
attachment 198671
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=198671&action=review
> > > Source/WebKit/efl/ChangeLog:9 > > + > > Please check the following entry in efl-wk1 TestExpectations: > # EFL's DRT needs CONFIRM NAVIGATION messages >
webkit.org/b/87246
fast/loader/form-submission-after-beforeunload-cancel.html [ Failure ] > > If the test now passes please unskip it in this patch. > > > Tools/DumpRenderTree/efl/DumpRenderTreeView.cpp:97 > > + return EINA_TRUE; > > You need to return !gTestRunner->shouldStayOnPageAfterHandlingBeforeUnload() instead of unconditionally EINA_TRUE I believe. Please check other ports.
Chris : Thanks for your review and comments. I will check them out.
Seokju Kwon
Comment 6
2013-05-16 15:58:54 PDT
Created
attachment 201995
[details]
Patch
Chris Dumez
Comment 7
2013-05-16 16:08:14 PDT
Comment on
attachment 201995
[details]
Patch Looks fine, r=me but Gyuyoung may want to take a look before landing as it touches Wk1 API.
Gyuyoung Kim
Comment 8
2013-05-16 17:03:23 PDT
Comment on
attachment 201995
[details]
Patch Looks fine as well.
WebKit Commit Bot
Comment 9
2013-05-16 20:39:14 PDT
Comment on
attachment 201995
[details]
Patch Clearing flags on attachment: 201995 Committed
r150241
: <
http://trac.webkit.org/changeset/150241
>
WebKit Commit Bot
Comment 10
2013-05-16 20:39:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug