[EFL] inspector-protocol/page/javascriptDialogEvents.html is failing https://bugs.webkit.org/show_bug.cgi?id=114781

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2013-05-16
Reviewed by Christophe Dumez.

Source/WebKit/efl:

We need to make a distinction between runBeforeUnloadConfirmPanel and confirm.

* WebCoreSupport/ChromeClientEfl.cpp:
(WebCore::ChromeClientEfl::runBeforeUnloadConfirmPanel):
* ewk/ewk_view.cpp: Add ewk_view_run_before_unload_confirm API.
(_ewk_view_smart_run_before_unload_confirm):
(ewk_view_base_smart_set):
(ewk_view_run_before_unload_confirm):
* ewk/ewk_view.h: Add smart class member function for runBeforeUnloadConfirmPanel.
* ewk/ewk_view_private.h:

Tools:

Add run_before_unload_confirm and
Print the log message with "CONFIRM NAVIGATION: " in console.

* DumpRenderTree/efl/DumpRenderTreeView.cpp:
(onBeforeUnloadConfirm):
(drtViewAdd):

LayoutTests:

Unskip fast/loader/form-submission-after-beforeunload-cancel.html as well.

* platform/efl-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/134663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150241 268f45cc-cd09-0410-ab3c-d52691b4dbfc